<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Register">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="323dp"
        android:layout_height="match_parent"
        android:background="#E5FCFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="188dp"
                android:layout_height="168dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="60dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:gravity="center_horizontal"
                android:paddingTop="15dp"
                android:text="@string/HexagonMusic"
                android:textSize="19sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Profile"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold"
                app:backgroundTint="#E5FCFF" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Feedback"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold"
                app:backgroundTint="#E5FCFF" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/logout"
                android:textColor="#FA7676"
                android:textSize="17sp"
                android:textStyle="bold"
                app:backgroundTint="#E5FCFF" />

        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</LinearLayout>