<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="334dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="380dp"
                android:layout_height="187dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="bottom|center"
                android:text="@string/HexagonMusic"
                android:textSize="29sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center"
                android:text="@string/Login"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <EditText

                android:id="@+id/username"
                android:layout_width="386dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="?attr/colorButtonNormal"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/Email_Adders"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" />

            <EditText
                android:id="@+id/EPphonenumber"
                android:layout_width="386dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="?attr/colorButtonNormal"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/Password"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" />


        </LinearLayout>

        <Button
            android:id="@+id/EPdonebtn"
            android:layout_width="388dp"
            android:layout_height="54dp"
            android:text="@string/Login"
            app:backgroundTint="#192B8F" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Registerhere"
            android:textColor="#00BCD4"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>
</LinearLayout>