<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".login_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="380dp"
                android:layout_height="137dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="bottom|center"
                android:text="@string/HexagonMusic"
                android:textSize="29sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center"
                android:text="@string/Login"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <EditText

                android:id="@+id/Lemail"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="?attr/colorButtonNormal"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/Email_Adders"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" />

            <EditText
                android:id="@+id/Lpassword"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="?attr/colorButtonNormal"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" />


        </LinearLayout>

        <Button
            android:id="@+id/Lloginbtn"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:text="@string/Login"
            app:backgroundTint="#192B8F" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Lregbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/Registerhere"
                android:textColor="#00BCD4"
                android:textSize="13sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/Lforgotbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="Forgot Password"
                android:textColor="#FD7474"
                android:textSize="13sp"
                app:backgroundTint="#FBF7F7" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>